src/components/tobo/toboSplash.css
body {
  background-color: var(--tobo-blue) !important;
}

/* SplashHeader */

#toboSplashHeader {
  position: sticky;
  top: 0;
  overflow: hidden;
  height: 647px;
  display: flex;
  justify-content: center;
  align-items: center;
}

img#splashHeaderBg {
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: top left;
}

#splashHeaderBgOverlay {
  width: 100%;
  height: 100%;
  background-color: var(--tobo-blue);
  mix-blend-mode: multiply;
  opacity: 0.5;
  position: absolute;
}

.splashHeaderLine {
  background-color: #fff;
  height: 2px;
  width: calc(50% - 250px);
  position: absolute;
  left: 0;
}

#splashHeaderLineXR {
  left: auto;
  right: 0;
}

#splashHeaderLineYT,
#splashHeaderLineYB {
  left: calc(50% - 1px);
  width: 2px;
  height: calc(50% - 62px);
  top: 0;
}

#splashHeaderLineYB {
  top: auto;
  bottom: 0;
  height: calc(50% - 126px);
}

#toboSplashHeader h2 {
  position: absolute;
  color: #fff;
  font-family: "anonymous-pro-b", serif;
  font-size: 48px;
  line-height: 42px;
  text-align: center;
}

#splashHeaderLogos {
  position: absolute;
  top: 50%;
  margin-top: 57px;
}

#splashHeaderLogos span {
  color: #fff;
  font-family: "anonymous-pro-b", serif;
  font-size: 20px;
  margin-right: 4px;
  margin-left: 12px;
  vertical-align: -2px;
}

#splashHeaderLogos a {
  margin-left: 12px;
  margin-right: 12px;
}

#splashHeaderLogos a img {
  vertical-align: middle;
  height: 49px;
}

@media only screen and (max-width: 767px) {
  #toboSplashHeader {
    height: 431px;
  }

  #splashHeaderLineXL,
  #splashHeaderLineXR {
    width: calc(50% - 160px);
  }

  #splashHeaderLineYT {
    height: calc(50% - 48px);
  }

  #splashHeaderLineYB {
    height: calc(50% - 112px);
  }

  #toboSplashHeader h2 {
    font-size: 30px;
    line-height: 1;
  }

  #splashHeaderLogos {
    text-align: center;
    margin-top: 52px;
  }

  #splashHeaderLogos span {
    font-size: 12px;
    display: block;
    line-height: 1;
    margin: 0;
    margin-bottom: 6px;
  }

  #splashHeaderLogos a {
    margin-left: 8px;
    margin-right: 8px;
  }

  #splashHeaderLogos a img {
    height: 24px;
  }
}

/* SplashModule */

.toboSplashModule {
  border-radius: 70px 70px 0px 0px;
  position: sticky;
  top: 0;
  margin-top: -70px;
  min-height: 75vh;
  background-color: #fff;
}

.splashModuleColumn {
  float: left;
  width: 50%;
  position: relative;
}

@media only screen and (max-width: 767px) {
  .toboSplashModule {
    border-radius: 36px 36px 0px 0px;
    margin-top: -36px;
  }

  .splashModuleColumn {
    width: 100%;
  }
}

/* SplashModule1 */

#toboSplashModule1 {
  padding-bottom: 164px;
}

img#splashModule1Shape {
  width: 30%;
  position: absolute;
  right: 1.3%;
  top: 593px;
}

#toboSplashModule1 .splashModuleColumnL img {
  width: 100%;
  padding-left: 9.9%;
  padding-right: 7.5%;
  margin-top: 118px;
  max-height: 50vh;
  object-fit: cover;
}

#splashModule1Circle {
  position: absolute;
  width: 29.7%;
  aspect-ratio: 4/4;
  background-color: var(--tobo-blue);
  mix-blend-mode: multiply;
  border-radius: 999px;
  top: 118px;
  margin-top: 22.5%;
  right: 3.9%;
}

img#splashModule1Logo {
  margin-left: 3.4%;
  margin-top: 130px;
  width: 65.2%;
}

#toboPage #toboSplashModule1 .splashModuleColumnR p {
  margin-bottom: 25px;
  margin-top: 26px;
  margin-left: 3.4%;
  width: 70.6%;
}

#toboSplashModule1 .splashModuleColumnR button {
  margin-top: 10px;
  margin-left: 3.4%;
  width: 438px;
}

#toboSplashModule1 #splashModule1Mint button {
  margin-top: 31px;
}

#splashModule1Mint span {
  line-height: 1;
  margin-left: 3.4%;
  margin-top: 10px;
  display: block;
  padding-left: 20px;
  font-family: "inter-regular", sans-serif;
  font-size: 14px;
  color: var(--tobo-dark);
}

#splashModule1Banner {
  background-color: var(--tobo-blue);
  position: absolute;
  margin: auto;
  left: 0;
  right: 0;
  top: 0;
  width: 460px;
  height: 56px;
  margin-top: 0px;
  border-radius: 0 0 38px 38px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "inter-bold", sans-serif;
  color: #fff;
  font-size: 22px;
}

#splashModule1Banner span {
  font-family: "inter-medium", sans-serif;
}

@media only screen and (max-width: 1023px) {
  #toboSplashModule1 .splashModuleColumnR button {
    width: 278px;
  }
}

@media only screen and (max-width: 767px) {
  #toboSplashModule1 {
    padding-bottom: 83px;
  }
  #toboSplashModule1 .splashModuleColumnR {
    margin-left: 10%;
  }

  img#splashModule1Shape {
    top: 800px;
  }

  #toboSplashModule1 .splashModuleColumnL img {
    margin-top: 59px;
  }

  #splashModule1Circle {
    top: 59px;
  }

  img#splashModule1Logo {
    margin-top: 65px;
  }

  #splashModule1Banner {
    width: 320px;
    height: 38px;
    font-size: 16px;
    margin-top: 0px;
    border-radius:  0px 0px 36px 36px;
  }
}

/* SplashModule2 */

#toboSplashModule2 {
  background-color: var(--tobo-yellow);
  padding-bottom: 131px;
}

#toboSplashModule2 .splashModuleColumnL {
  width: 61%;
}

#toboSplashModule2 h3 {
  margin-left: 14.6%;
  margin-top: 116px;
}

#toboPage #toboSplashModule2 p {
  margin-left: 14.6%;
  margin-top: 29px;
}

#toboSplashModule2 button {
  margin-left: 14.6%;
  margin-top: 33px;
}

#toboSplashModule2 .splashModuleColumnR {
  width: 39%;
}

#toboSplashModule2 .splashModuleColumnR img {
  width: 72.2%;
  position: absolute;
  margin-top: 79px;
  right: 15.2%;
}

.splashModule2Circle {
  position: absolute;
  width: 17.3%;
  aspect-ratio: 4/4;
  background-color: var(--tobo-blue);
  mix-blend-mode: multiply;
  border-radius: 999px;
  top: 79px;
  right: 15.2%;
  margin-right: 63.55%;
}

#splashModule2Circle2 {
  background-color: var(--tobo-red);
  margin-top: 20%;
}

@media only screen and (max-width: 767px) {
  #toboSplashModule2 .splashModuleColumn {
    width: 90%;
    margin-left: 0;
  }

  #toboSplashModule2 h3 {
    margin-top: 58px;
  }

  #toboPage #toboSplashModule2 p {
    margin-right: 4.6%;
  }

  #toboSplashModule2 .splashModuleColumnR {
    padding-bottom: 50%;
  }

  #toboSplashModule2 .splashModuleColumnR img {
    margin-top: 40px;
  }

  .splashModule2Circle {
    top: 40px;
  }
}

/* SplashModule3 */

#toboSplashModule3 {
  background-color: #ff737d;
  padding-bottom: 70px;
}

#toboSplashModule3 .splashModuleColumnL img {
  width: 100%;
  padding-left: 5.5%;
  padding-right: 6.4%;
  margin-top: 16px;
}

#toboSplashModule3 .splashModuleColumnR {
  padding-bottom: 64px;
}

#toboSplashModule3 h3 {
  margin-left: 5.4%;
  margin-top: 150px;
}

#toboPage #toboSplashModule3 p {
  margin-left: 5.4%;
  margin-top: 28px;
  width: 81.6%;
}

#splashModule3Social {
  margin-left: 5.4%;
  margin-top: 51px;
  width: 270px;
}

#splashModule3Social span {
  font-family: "oswald-medium", sans-serif;
  display: block;
  line-height: 1;
  font-size: 24px;
  margin-bottom: 20px;
  color: var(--tobo-dark);
}

#splashModule3Social a {
  line-height: 1;
  color: var(--tobo-dark);
  font-size: 22px;
  font-family: "inter-bold", sans-serif;
  margin-top: 5px;
  display: inline-block;
  width: 135px;
}

#splashModule3Social a:active {
  filter: invert(1);
}

@media (hover: hover) {
  #splashModule3Social a:hover {
    filter: invert(1);
  }
}

@media only screen and (max-width: 767px) {
  #toboSplashModule3 {
    padding-bottom: 40px;
  }
  
  #toboSplashModule3 .splashModuleColumnR {
    padding-bottom: 32px;
  }

  #toboSplashModule3 .splashModuleColumnR {
    margin-left: 8%;
  }

  #toboSplashModule3 h3 {
    margin-top: 50px;
  }
  
  #splashModule3Social {
    width: 200px;
  }
  
  #splashModule3Social span {
    font-size: 18px;
  }
  
  #splashModule3Social a {
    font-size: 16px;
    width: 100px;
  }
}
/* SplashModule4 */

#toboSplashModule4 {
  background-color: var(--tobo-blue);
  padding-bottom: 131px;
}

#toboSplashModule4 .splashModuleColumnL {
  width: 61%;
}

#toboSplashModule4 h3 {
  margin-left: 14.6%;
  margin-top: 116px;
}

#toboPage #toboSplashModule4 p {
  margin-left: 14.6%;
  margin-top: 29px;
}

#toboSplashModule4 button {
  margin-left: 14.6%;
  margin-top: 33px;
}

#toboSplashModule4 .splashModuleColumnR {
  width: 39%;
}

#toboSplashModule4 .splashModuleColumnR img {
  width: 72.2%;
  position: absolute;
  margin-top: 79px;
  right: 15.2%;
}

.splashModule4Circle {
  position: absolute;
  width: 17.3%;
  aspect-ratio: 4/4;
  background-color: var(--tobo-blue);
  mix-blend-mode: multiply;
  border-radius: 999px;
  top: 79px;
  right: 15.2%;
  margin-right: 63.55%;
}

#splashModule4Circle2 {
  background-color: var(--tobo-red);
  margin-top: 20%;
}

@media only screen and (max-width: 767px) {
  #toboSplashModule4 .splashModuleColumn {
    width: 90%;
    margin-left: 0;
  }

  #toboSplashModule4 h3 {
    margin-top: 58px;
  }

  #toboPage #toboSplashModule4 p {
    margin-right: 4.6%;
  }

  #toboSplashModule4 .splashModuleColumnR {
    padding-bottom: 50%;
  }

  #toboSplashModule4 .splashModuleColumnR img {
    margin-top: 40px;
  }

  .splashModule4Circle {
    top: 40px;
  }
}

